# SDL2_template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
